# CareerOS

./: .env.example  .gitignore  Makefile  package-lock.json  package.json  pyproject.toml
apps/extension/: manifest.json  popup.html
apps/extension/src/: background.ts  content.ts  styles.css
apps/web/: package.json  tailwind.config.js
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(authenticated)/: layout.tsx
apps/web/src/components/auth/: sidebar.tsx  topbar.tsx
apps/web/src/components/dashboard/: action-item.tsx  goal-progress.tsx  mission-card.tsx  stats-widget.tsx
apps/web/src/components/resume/: experience-timeline.tsx  projects-section.tsx  resume-uploader.tsx  (+1 more)
apps/web/src/lib/: api-client.ts  auth.ts  ui.ts  utils.ts
apps/web/src/types/: api.ts
docker/: api.Dockerfile  docker-compose.yml  web.Dockerfile
services/api/: alembic.ini  main.py  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 001_initial.py  002_company_intelligence.py  003_relationship_graph.py  004_job_intelligence.py  005_resume_matching.py  006_outreach_intelligence.py  007_memory.py  008_daily_briefs.py  009_career_goals.py  010_knowledge_graph.py
services/api/core/: config.py  dependencies.py
services/api/models/: models.py
services/api/repositories/: __init__.py
services/api/routers/: company.py  daily.py  extension.py  goal.py  graph.py  job.py  knowledge_graph.py  match.py  memory.py  outreach.py  people.py  resume.py  stats.py
services/api/schemas/: __init__.py
(+14 files in other folders)
